<resources>
    <string name="app_name">PureMango</string>
    <string name="cancel">Cancel</string>
    <string name="login_title">Pure Mango </string>
    <string name="user_field">username</string>
    <string name="pass_field">password</string>
    <string name="login_button">LOGIN</string>
    <string name="no_count">create an account</string>
    <string name="forgot_password">Forgot password</string>
    <string name="credentials">Ingresa tú número de cédula</string>
    <string name="save_button">Guardar</string>
    <string name="cancel_button">Cancel</string>
    <string name="name_field">Nombres</string>
    <string name="last_name_field">Apellidos</string>
    <string name="phonenumber_field">Teléfono</string>
    <string name="email_address_field">correo electrónico</string>
    <string name="usernname_field">usuario</string>
    <string name="password_field">contraseña</string>
    <string name="password_2_field">repetir contraseña</string>
    <string name="signup_users">Ingrese los datos solicitados</string>
    <string name="password_recovery">Recuperar contraseña</string>
    <string name="send_button">Enviar</string>
    <string name="password_recovery_message">La contraseña será tu número de cédula</string>
    <string name="confirm_code">Confirmar codigo</string>
    <string name="new_password">Nueva Contraseña</string>
    <string name="repeat_new_password">Repetir nueva contraseña</string>
    <string name="actual_balance">Balance actual</string>
    <string name="main_panel">Panel principal</string>
    <string name="profits">Ganancias</string>
    <string name="losses">Pérdidas</string>
    <string name="predictions">predicciones</string>
    <string name="verify_balance">Balances pasados</string>
    <string name="Profle_settings">Usuario activo</string>
    <string name="edit_profile">Editar perfil</string>
    <string name="close_session">Cerrar sesión</string>
    <string name="profile_credentials">Cédula</string>
    <string name="profile_names">Nombres</string>
    <string name="profile_lastnames">Apellidos</string>
    <string name="predictions_settings">Verificar las predicciones</string>
    <string name="banlance_all">Todos los balances</string>



    <string name="last_state">Estado del último año</string>
    <string name="product_name">Nombre del producto</string>
    <string name="time_start">Tiempo de inicio de balance</string>
    <string name="time_end">Tiempo de final de balance</string>
    <string name="total_profit">Total de ganancias</string>
    <string name="total_loss">Total de pérdidas</string>
    <string name="return_">Volver</string>

    <string-array name="departmentsName">
        <item>Finanzas</item>
        <item>Marketing</item>
        <item>Produccion</item>
    </string-array>

</resources>