<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="1dp"
    android:layout_marginEnd="2dp"
    android:orientation="vertical"
    android:fillViewport="true"
    tools:context=".EditProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/signup_users"
                        android:textStyle="bold"
                        android:textSize="20dp"

                        />
                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="30dp"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                app:helperTextEnabled="true"
                android:hint="@string/credentials"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/credentialsEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:hint="@string/name_field"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/namesEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:hint="@string/last_name_field"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastnameEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:hint="@string/email_address_field"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailFieldEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:hint="@string/phonenumber_field"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneNumberEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:hint="@string/user_field"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameFieldEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:hint="@string/password_field"


                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passWordEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:hint="@string/password_2_field"


                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/repeatPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/sendbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_marginStart="25dp"
                    android:onClick="editProfile"
                    android:text="@string/save_button"
                    android:textColor="@color/buttonsMain"
                    android:textStyle="bold"
                    app:backgroundTint="@color/colorPrimaryDark"
                    app:cornerRadius="?attr/dialogPreferredPadding" />

                <Button
                    android:id="@+id/buttonCancel"
                    android:layout_width="150dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="55dp"
                    android:onClick="cancelEdit"
                    android:text="@string/cancel_button"
                    android:textColor="@color/buttonsMain"
                    android:textStyle="bold"
                    app:backgroundTint="@color/colorPrimaryDark"
                    app:cornerRadius="?attr/dialogPreferredPadding" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>